# frontend-rust-dioxus-test-app

./: .gitignore  Cargo.toml  Dioxus.toml  index.html  readme.md
docs/: index.html  rust-web-demo
docs/assets/dioxus/: rust-web-demo.js  rust-web-demo_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
docs/bundle/dmg/: rust-web-demo_0.1.0_aarch64.dmg
docs/bundle/macos/Tailwind CSS + Dioxus.app/Contents/: Info.plist
docs/bundle/macos/Tailwind CSS + Dioxus.app/Contents/MacOS/: rust-web-demo
docs/bundle/macos/rust-web-demo.app/Contents/: Info.plist
docs/bundle/macos/rust-web-demo.app/Contents/MacOS/: rust-web-demo
docs/dashboard/: index.html
docs/login/: index.html
docs/profile/: index.html
public/: tailwind.css
src/: lib.rs  main copy.rs  main.rs
src/pages/: not_found.rs
