[package]
name = "rust-web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
im-rc = "15.1.0"
log = "0.4.20"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"

[package.metadata.bundle]
# App (Project) Name

name = "rust-web-demo"
 